gateway/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-gateway
  namespace: nginx-gateway
spec:
  externalTrafficPolicy: Local
  type: LoadBalancer
  ports: # Update the following ports to match your Gateway Listener ports
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 443
      targetPort: 443
      protocol: TCP
      name: https
  selector:
    app: nginx-gateway
